--- a/build.gradle
+++ b/build.gradle
@@ -47,3 +47,6 @@ dependencyManagement {
 tasks.named('test') {
     useJUnitPlatform()
 }
+test {
+    systemProperty 'spring.profiles.active', findProperty('testProfile') ?: 'local'
+}
